<resources>
    <string name="app_name">Password Minimizer</string>

    <string name="string_create_simple_pw">Leichtes Passwort erstellen.</string>
    <string name="string_create_middle_pw">Mittleres Passwort erstellen.</string>
    <string name="string_create_strong_pw">Starkes Passwort erstellen.</string>

    <string name="string_navigation_pw_detail_websites">Webseiten</string>
    <string name="string_navigation_pw_detail_settings">Einstellungen</string>

    <string name="string_drawer_open">Öffnen</string>
    <string name="string_drawer_close">Schließen</string>
    <string name="string_drawer_home">Startseite</string>
    <string name="string_drawer_home_description">Gehe zum Einstiegspunkt</string>
    <string name="string_drawer_preferences">Einstellungen</string>
    <string name="string_drawer_preferences_description">Ändere deine Einstellungen</string>
    <string name="string_drawer_about">Über uns</string>
    <string name="string_drawer_about_description">Lerne uns kennen</string>
    <string name="string_pin_1">1</string>
    <string name="string_pin_2">2</string>
    <string name="string_pin_3">3</string>
    <string name="string_pin_4">4</string>
    <string name="string_pin_5">5</string>
    <string name="string_pin_6">6</string>
    <string name="string_pin_7">7</string>
    <string name="string_pin_8">8</string>
    <string name="string_pin_9">9</string>
    <string name="string_pin_0">0</string>
    <string name="string_pin_delete">delete</string>
    <string name="string_pin_question">question</string>

    <string name="string_enter_pw">Bitte gib deinen PIN ein.</string>
    <string name="string_add_pw">Drücke den Plus-Button in der rechten unteren Ecke um ein Picture Password zu erstellen.</string>

    <string name="name">Name</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="website">Webseite</string>
    <string name="change_image">Bild ändern</string>
    <string name="change_number">Zahl ändern</string>
    <string name="change_security">Sicherheitsstufe ändern</string>
    <string name="delete_password">Passwort löschen</string>
    <string name="string_practise_password">Passwort üben</string>
    <string name="string_websites_add">Füge Webseiten für dieses Passwort mit dem Plus-Button hinzu.</string>

    <string name="string_create_pw_choose_name">"Wähle einen Namen für dein Passwort aus."</string>
    <string name="string_create_pw_choose_image">"Wähle eine Bild für dein Passwort aus."</string>
    <string name="string_create_pw_choose_num">"Wähle eine Zahl für dein Password aus."</string>
    <string name="string_create_pw_description">Wähle eine Sicherheitsstufe für dein neues Picture Password.</string>
    <string name="string_confirm_pw_1">"Ziehe nun deine eben gewählte Zahl ("</string>
    <string name="string_confirm_pw_2">") auf einen bestimmten Fleck im Bild."</string>

    <string name="string_create_pw_hint_name">Name des Passworts</string>
    <string name="string_btn_next">weiter</string>
    <string name="string_create_pw_choose_image_description">Wähle ein Bild aus.</string>
    <string name="string_wrong_password">Falsches Passwort</string>
</resources>
