<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ath.password_minimizer.activities.PasswordDetailSettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/practisePwButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_dialog_info"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:text="@string/string_practise_password" />

        <Button
            android:id="@+id/changeImageButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_gallery"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:text="@string/change_image" />

        <Button
            android:id="@+id/changeNumberButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_numeric_keypad"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:text="@string/change_number" />

        <Button
            android:id="@+id/changeSecurityButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_secure"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:text="@string/change_security" />

        <Button
            android:id="@+id/deletePasswordButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@android:drawable/ic_delete"
            android:drawablePadding="20dp"
            android:drawableTint="@color/color_pin_field_bg"
            android:gravity="left|center"
            android:text="@string/delete_password" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            app:itemIconTint="@drawable/bottom_nav_icon_color_selector"
            app:itemTextColor="@drawable/bottom_nav_icon_color_selector"
            app:menu="@menu/navigation_menu" />

    </LinearLayout>

    <include layout="@layout/navigation_drawer" />

</android.support.v4.widget.DrawerLayout>