<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_violet"
    android:orientation="vertical"
    tools:context="ath.password_minimizer.activities.CreatePWStep1Activity">

    <TextView
        android:id="@+id/step1_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_create_pw_choose_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_create_pw_info_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/pw_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_buttons_create_pw_margin"
            android:layout_marginRight="@dimen/dimen_buttons_create_pw_margin"
            android:hint="@string/string_create_pw_hint_name" />

    </LinearLayout>

    <Button
        android:id="@+id/step1_btn_next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_buttons_create_pw_margin"
        android:layout_weight="1"
        android:background="@drawable/create_pw_button_background_disabled"
        android:text="@string/string_btn_next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_buttons_create_pw_text_size" />

    <LinearLayout
        android:id="@+id/step3_custom_progressbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
