<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:context="ath.password_minimizer.activities.CreatePasswordActivity"-->

    <LinearLayout
        android:id="@+id/linearLayout_pw_simple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/create-pw-description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_create_pw_description"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_simple_pw"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_add"/>

            <TextView
                android:gravity="center"
                android:id="@+id/text_pw_simple"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/string_create_simple_pw"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_pw_middle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_middle_pw"
            android:gravity="center">

            <TextView
                android:id="@+id/text_pw_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_create_middle_pw"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_pw_strong"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_strong_pw"
            android:gravity="center">

            <TextView
                android:id="@+id/text_pw_strong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_create_strong_pw"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
