<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="ath.password_minimizer.activities.StartPinActivity">



        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_picture_password" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:id="@+id/enter_pw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_enter_pw"
                android:textColor="@color/color_white" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_pin_fields"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_entry_first"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_margin_pin_entry_top"
                android:layout_marginLeft="@dimen/dimen_margin_pin_entry"
                android:layout_marginRight="@dimen/dimen_margin_pin_entry"
                android:layout_marginTop="@dimen/dimen_margin_pin_entry_top"
                android:layout_weight="1"
                android:background="@drawable/pin_entry_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="numberPassword"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_pinField_password_text_size" />

            <TextView
                android:id="@+id/pin_entry_second"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_margin_pin_entry_top"
                android:layout_marginLeft="@dimen/dimen_margin_pin_entry"
                android:layout_marginRight="@dimen/dimen_margin_pin_entry"
                android:layout_marginTop="@dimen/dimen_margin_pin_entry_top"
                android:layout_weight="1"
                android:background="@drawable/pin_entry_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="numberPassword"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_pinField_password_text_size" />

            <TextView
                android:id="@+id/pin_entry_third"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_margin_pin_entry_top"
                android:layout_marginLeft="@dimen/dimen_margin_pin_entry"
                android:layout_marginRight="@dimen/dimen_margin_pin_entry"
                android:layout_marginTop="@dimen/dimen_margin_pin_entry_top"
                android:layout_weight="1"
                android:background="@drawable/pin_entry_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="numberPassword"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dimen_pinField_password_text_size" />

            <TextView
                android:id="@+id/pin_entry_fourth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_margin_pin_entry_top"
                android:layout_marginLeft="@dimen/dimen_margin_pin_entry"
                android:layout_marginRight="@dimen/dimen_margin_pin_entry"
                android:layout_marginTop="@dimen/dimen_margin_pin_entry_top"
                android:layout_weight="1"
                android:background="@drawable/pin_entry_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="numberPassword"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dimen_pinField_password_text_size" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
        android:layout_weight="5"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/gridlayout_pin_keypad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alignmentMode="alignBounds"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="4"
            android:rowOrderPreserved="false">

            <Button
                android:id="@+id/button_1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_1"
                android:text="@string/string_pin_1"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_2"
                android:text="@string/string_pin_2"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_3"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_3"
                android:text="@string/string_pin_3"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_4"
                android:text="@string/string_pin_4"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_5"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_5"
                android:text="@string/string_pin_5"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_6"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_6"
                android:text="@string/string_pin_6"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_7"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_7"
                android:text="@string/string_pin_7"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_8"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_8"
                android:text="@string/string_pin_8"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_9"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_9"
                android:text="@string/string_pin_9"
                android:textColor="@color/color_button_pin_text" />

            <ImageButton
                android:id="@+id/button_help"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:src="@drawable/ic_question_rounded_quadrat"
                android:tag="@string/string_pin_question"
                android:textColor="@color/color_button_pin_text" />

            <Button
                android:id="@+id/button_0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:tag="@string/string_pin_0"
                android:text="@string/string_pin_0"
                android:textColor="@color/color_button_pin_text" />

            <ImageButton
                android:id="@+id/button_delete"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="@dimen/dimen_margin_gridlayout_pin"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:background="@drawable/pin_button_background"
                android:gravity="center"
                android:src="@drawable/ic_eraser"
                android:tag="@string/string_pin_delete"
                android:textColor="@color/color_button_pin_text" />

        </GridLayout>
    </LinearLayout>
</LinearLayout>
